# AzureVoxel

./: .gitattributes  .gitignore  AzureVoxel  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SUBJECT_GUIDE.md  cmake_install.cmake  create_texture.py  documentation_guide.md  main.cpp  summary.md  test_registry
chunk_data/: chunk_-16_0_-16.chunk  chunk_-16_0_0.chunk  chunk_-16_0_16.chunk  chunk_0_0_-16.chunk  chunk_0_0_0.chunk  chunk_0_0_16.chunk  chunk_16_0_-16.chunk  chunk_16_0_0.chunk  chunk_16_0_16.chunk
headers/: block.h  block_registry.h  camera.h  chunk.h  crosshair.h  planet.h  shader.h  texture.h  window.h  world.h
res/blocks/: blocks.json
res/textures/: grass_block.pngZone.Identifier
shaders/: crosshair_fragment.glsl  crosshair_vertex.glsl  fragment.glsl  vertex.glsl
src/: block.cpp  block_registry.cpp  camera.cpp  chunk.cpp  crosshair.cpp  planet.cpp  shader.cpp  texture.cpp  window.cpp  world.cpp
